# kdev-cargo

./: CMakeLists.txt  README.md
cmake/: FindCargo.cmake
src/: CMakeLists.txt  Messages.sh  cargobuildjob.cpp  cargobuildjob.h  cargofindtestsjob.cpp  cargofindtestsjob.h  cargoplugin.cpp  cargoplugin.h  kdevcargo.json
src/tests/: CMakeLists.txt  paths.h.cmake  test_cargo.cpp  test_cargo.h
src/tests/data/kdev-cargo-test/: kdev-cargo-test.kdev4
src/tests/kdev-cargo-test/: Cargo.toml
src/tests/kdev-cargo-test/src/: lib.rs
